--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
