--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lite-youtube-embed": "^2.4.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.4.1",
