--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.11.24",
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.19",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.2",
@@ -27,6 +28,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/react-slick": "^0.23.13"
   }
 }
