--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -18,6 +19,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.2",
     "next": "^13.3.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
