--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.2",
+    "gray-matter": "^4.0.3",
     "next": "^13.3.0",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
