--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-dom": "18.2.0",
     "react-lite-youtube-embed": "^2.4.0",
     "react-slick": "^0.30.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "slick-carousel": "^1.8.1",
+    "strip-markdown": "^6.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
