--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.2",
+    "gray-matter": "^4.0.3",
     "next": "^13.3.0",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lite-youtube-embed": "^2.4.0",
     "react-slick": "^0.30.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "slick-carousel": "^1.8.1",
+    "strip-markdown": "^6.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
