--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "@fontsource/metropolis": "^5.0.11",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@types/node": "20.11.24",
-    "@types/react": "18.2.62",
-    "@types/react-dom": "18.2.19",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.2",
+    "eslint-config-next": "^14.2.35",
     "gray-matter": "^4.0.3",
-    "next": "^13.3.0",
+    "next": "^14.2.35",
     "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "postcss": "8.4.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18",
+    "react-dom": "18",
     "react-lite-youtube-embed": "^2.4.0",
     "react-slick": "^0.30.2",
     "remark": "^15.0.1",
